---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 30. 04. 2025
  Changes:
    - Doesn't put ammo on a slot where there is no weapon.
  Bugfixes:
    - Fix another issue with trash overflow deletion setting not deleting the trash if global transfer was off
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 23. 04. 2025
  Changes:
    - Use the network(s) on the current surface first if the surface limitation is off
  Bugfixes:
    - Fix issue with trash overflow deletion setting
    - Fix crash when there weren't any logistic filters set
    - Fix crash when the trash couldn't fit into the logistic network
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 23. 04. 2025
  Changes:
    - Release for Factorio 2.0 version
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 14. 06. 2024
  Optimizations:
    - Stops checking every logistics network if requests are fulfilled.
      Might be useless but just in case you have hundreds or thousands of different logistic networks
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 14. 06. 2024
  Bugfixes:
    - Fixed an issue with trash removal which I accidentally caused in previous fix
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 14. 06. 2024
  Bugfixes:
    - Fixed bug which caused global transfer to work incorrectly
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 01. 09. 2023
  Graphics:
    - Added thumbnail.
---------------------------------------------------------------------------------------------------
Version: 1.0.0