@@ -6,6 +6,7 @@ ipl-delete-trash-overflow=Delete trash overflow
 ipl-global-transfer=Global transfer
 ipl-limit-surface=Limit to current surface
 ipl-ticks-per-transfer=Ticks per transfer
+ipl-notify-full=Notify if network full
 
 [mod-setting-description]
 ipl-force-enabled=With this on the mod will still handle your requests even though Personal Logistics are ticked off so that the bots won't bring you items
@@ -15,3 +16,4 @@ ipl-delete-trash-overflow=Deletes the items that don't fit in the logistic netwo
 ipl-global-transfer=Uses every logistic network to handle item transfers. With this off it uses the network the player is in.
 ipl-limit-surface=Limit the global transfer to the current surface/planet.
 ipl-ticks-per-transfer=How many ticks it takes for the mod to transfer the items\n\nThis is in addition to the current event based system where it fulfills the requests if a change happened in your inventory so that you get the items that are slowly trickling into your logistic network(s) that weren't available when the event fired.\n\nThe nice thing if you set this to 1 is that the bots won't have time to try bring you the items.
+ipl-notify-full=Notify if the network(s) couldn't take the items from your trash because it was full
